--- a/posts.html
+++ b/posts.html
@@ -21,9 +21,9 @@
                 <li><a href="contact.html">Contacto</a></li>
             </ul>
         </nav>
-        <img src="img/Minecraft_logo.png" alt="Logo de Blogcraft" id="logo">
+        <img src="img/Minecraft_logo.png" alt="Logo de Blogcraft" id="logo" style="max-width: 274px;">
     </header>
-    <img src="img/Minecraft_logo.png" alt="Logo de Blogcraft" id="logo2">
+    <img src="img/Minecraft_logo.png" alt="Logo de Blogcraft" id="logo2" style="max-width: 100%; display: none;">
 
     <main style="background-color: #f2f2f2; padding: 2rem 0;">
         <h2 class="featured-title">Posts recientes</h2>
