--- a/about.html
+++ b/about.html
@@ -3,29 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="apple-touch-icon" sizes="180x180" href="img/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="img/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="img/favicon-16x16.png">
-    <title>Blogcraft | Acerca de</title>
+    <title>Blogcraft</title>
+    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="css/responsive.css">
-    <link rel="stylesheet" href="bootstrap/bootstrap.min.css">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/favicon-16x16.png">
 </head>
 <body>
     <header>
-        <nav>
-            <ul>
-                <li><a href="index.html">Inicio</a></li>
-                <li><a href="posts.html">Posts</a></li>
-                <li><a href="about.html">Acerca de</a></li>
-                <li><a href="contact.html">Contacto</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg lg-body-tertiary">
+            <div class="container-fluid">
+                <a href="index.html" class="navbar-brand"><img src="assets/Blogcraft_logo.png" alt="Blogcraft logo" id="logo"></a>
+                <button type="button" class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a href="index.html" class="nav-link">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="posts.html" class="nav-link">Posts</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="about.html" class="nav-link active" aria-current="page">Acerca de</a>
+                        </li>
+                        <li class="nav-item">
+                            <a href="contact.html" class="nav-link">Contacto</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </nav>
-        <img src="img/Minecraft_logo.png" alt="Logo de Blogcraft" id="logo" style="max-width: 274px;">
     </header>
-    <img src="img/Minecraft_logo.png" alt="Logo de Blogcraft" id="logo2" style="max-width: 100%; display: none;">
 
-    <main class="text" style="background-color: #f2f2f2; padding: 1rem 0 2rem;">
+    <main class="elMain">
         <h2>Sobre mí</h2>
         <p>Blogcraft es un sitio web dedicado a compartir información, noticias y consejos sobre el juego Minecraft. Mi objetivo es proporcionar contenido de alta calidad y útil para la comunidad de Minecraft.</p>
         <p>En mi sitio web, encontrarás una variedad de publicaciones sobre diferentes temas relacionados con Minecraft, desde guías y tutoriales hasta noticias sobre actualizaciones y eventos.</p>
@@ -35,12 +49,12 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-                        Pregunta frecuente #1
+                        ¿Por qué las últimas actualizaciones son malas?
                     </button>
                 </h2>
                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        La pregunta frecuente #1.
+                        Porque Mojang no le sabe a la chamba.
                     </div>
                 </div>
             </div>
@@ -48,12 +62,12 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
-                        Pregunta frecuente #2
+                        ¿Por qué el juego se está muriendo?
                     </button>
                 </h2>
                 <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        La pregunta frecuente #2.
+                        Por que son una empresa mediocre.
                     </div>
                 </div>
             </div>
@@ -61,12 +75,12 @@
             <div class="accordion-item">
                 <h2 class="accordion-header">
                     <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                        Pregunta frecuente #3
+                        ¿Por qué no eliminan las mob vote?
                     </button>
                 </h2>
                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionExample">
                     <div class="accordion-body">
-                        La pregunta frecuente #3.
+                        Porque odian a las personas.
                     </div>
                 </div>
             </div>
