--- a/contact.html
+++ b/contact.html
@@ -43,18 +43,18 @@
         <h2>Contacto</h2>
         <p>Si tenés alguna pregunta, sugerencia o comentario sobre mi sitio web o sobre Minecraft en general, por favor contactame a través del siguiente formulario:</p>
 
-        <form action="" method="post">
-            <label for="nombre">Nombre:</label>
-            <input type="text" name="nombre" id="nombre" required>
+        <form action="https://formspree.io/f/mrgwvajz" method="post">
+            <label for="Nombre">Nombre:</label>
+            <input type="text" name="Nombre" id="Nombre" required>
 
-            <label for="email">Correo electrónico:</label>
-            <input type="email" name="email" id="email" required>
+            <label for="Email">Correo electrónico:</label>
+            <input type="email" name="Email" id="Email" required>
 
-            <label for="asunto">Asunto:</label>
-            <input type="text" name="asunto" id="asunto" required>
+            <label for="Asunto">Asunto:</label>
+            <input type="text" name="Asunto" id="Asunto" required>
 
-            <label for="mensaje">Mensaje:</label>
-            <textarea name="mensaje" id="mensaje"></textarea>
+            <label for="Mensaje">Mensaje:</label>
+            <textarea name="Mensaje" id="Mensaje"></textarea>
 
             <button type="submit" class="enviar">Enviar</button>
         </form>
