--- a/contact.html
+++ b/contact.html
@@ -54,7 +54,7 @@
             <input type="text" name="Asunto" id="Asunto" required>
 
             <label for="Mensaje">Mensaje:</label>
-            <textarea name="Mensaje" id="Mensaje"></textarea>
+            <textarea name="Mensaje" id="Mensaje" required></textarea>
 
             <button type="submit" class="enviar">Enviar</button>
         </form>
