--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,11 @@
 
     <script src="https://www.google.com/recaptcha/api.js" async defer></script>
     <style>
+        #todo .g-recaptcha {
+            max-width: fit-content;
+            margin: auto;
+        }
+
         #todo #g-recaptcha-response {
             display: block !important;
             position: absolute;
