Páginas de posts hechas
Se hicieron las páginas de posts individuales además de unos pequeños cambios en general

--- a/about.html
+++ b/about.html
@@ -41,9 +41,11 @@
 
     <main class="elMain">
         <h2>Sobre mí</h2>
+        <p class="date">(Texto generado con ChatGPT)</p>
         <p>Blogcraft es un sitio web dedicado a compartir información, noticias y consejos sobre el juego Minecraft. Mi objetivo es proporcionar contenido de alta calidad y útil para la comunidad de Minecraft.</p>
         <p>En mi sitio web, encontrarás una variedad de publicaciones sobre diferentes temas relacionados con Minecraft, desde guías y tutoriales hasta noticias sobre actualizaciones y eventos.</p>
         <p>Además, siempre estoy dispuesto a ayudar y responder a las preguntas de la comunidad.</p>
+        <p class="date">(Texto de chamba)</p>
 
         <div class="accordion" id="faq">
             <div class="accordion-item">
