--- a/contact.html
+++ b/contact.html
@@ -70,7 +70,7 @@
             <input type="text" name="Asunto" id="Asunto" required>
 
             <label for="Mensaje">Mensaje:</label>
-            <textarea name="Mensaje" id="Mensaje" required></textarea>
+            <textarea name="Mensaje" id="Mensaje" maxlength="300" required></textarea>
 
             <div class="g-recaptcha" data-sitekey="6LcEMxMpAAAAAKC6W1MFvsGoKfZ4ZK1nNAq3YVxp"></div><br>
 
