--- a/acerca-de.html
+++ b/acerca-de.html
@@ -14,7 +14,7 @@
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
 </head>
-<body>
+<body id="background">
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -52,44 +52,50 @@
         </nav>
     </header>
 
-    <main>
-        <div class="container-fluid" id="background">
-            <div class="container">
-                <h2 class="text-center pt-4 pb-3">Posts recientes</h2>
+    <main class="container pb-4">
+        <h2 class="pt-4 pb-2">Sobre mí</h2>
+        <p class="text-body-secondary">(Texto generado con ChatGPT)</p>
+        <p>Blogcraft es un sitio web dedicado a compartir información, noticias y consejos sobre el juego Minecraft. Mi objetivo es proporcionar contenido de alta calidad y útil para la comunidad de Minecraft.</p>
+        <p>En mi sitio web, encontrarás una variedad de publicaciones sobre diferentes temas relacionados con Minecraft, desde guías y tutoriales hasta noticias sobre actualizaciones y eventos.</p>
+        <p>Además, siempre estoy dispuesto a ayudar y responder a las preguntas de la comunidad.</p>
 
-                <div class="row justify-content-md-center">
-                    <div class="col-lg">
-                        <div class="card">
-                            <img src="assets/posts/1.20_banner.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">5 curiosidades sobre Minecraft 1.20</h5>
-                                <h6 class="card-subtitle mb-3 text-body-secondary">Publicado el 17 de abril de 2023</h6>
-                                <p class="card-text">El lanzamiento de la nueva versión de Minecraft 1.20 es uno de los más esperados por los fans del juego. Acá hay algunos datos curiosos de esta versión.</p>
-                                <a href="posts/post1.html" class="btn btn-primary bcBtn">Leer más</a>
-                            </div>
-                        </div>
+        <h2 class="pt-3 pb-2">Preguntas frecuentes</h2>
+        <p class="text-body-secondary">(Texto de chamba)</p>
+
+        <div class="accordion" id="accordionFAQ">
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
+                        ¿Por qué el juego se está muriendo?
+                    </button>
+                </h2>
+                <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#accordionFAQ">
+                    <div class="accordion-body">
+                        Porque Mojang es una empresa mediocre.
                     </div>
-                    <div class="col-lg">
-                        <div class="card">
-                            <img src="assets/posts/wallpaper-minecraft-hd.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">10 tips para sobrevivir en Minecraft</h5>
-                                <h6 class="card-subtitle mb-3 text-body-secondary">Publicado el 15 de abril de 2023</h6>
-                                <p class="card-text">Sobrevivir en Minecraft no es tarea fácil, especialmente si sos nuevo en el juego. Acá te damos tips consejos útiles para que podás sobrevivir en el mundo de Minecraft.</p>
-                                <a href="posts/post2.html" class="btn btn-primary bcBtn">Leer más</a>
-                            </div>
-                        </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
+                        ¿Por qué las últimas actualizaciones son malas?
+                    </button>
+                </h2>
+                <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#accordionFAQ">
+                    <div class="accordion-body">
+                        Porque no le saben a la chamba.
                     </div>
-                    <div class="col-lg">
-                        <div class="card">
-                            <img src="assets/posts/minecraft-mods.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Los mejores mods para Minecraft</h5>
-                                <h6 class="card-subtitle mb-3 text-body-secondary">Publicado el 10 de abril de 2023</h6>
-                                <p class="card-text">Los mods en Minecraft posibilitan la personalización del juego de diversas formas, siendo una parte esencial de su ecosistema, y aquí podrás encontrar los mejores.</p>
-                                <a href="posts/post3.html" class="btn btn-primary bcBtn">Leer más</a>
-                            </div>
-                        </div>
+                </div>
+            </div>
+            <div class="accordion-item">
+                <h2 class="accordion-header">
+                    <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
+                        ¿Por qué no eliminan las mob vote?
+                    </button>
+                </h2>
+                <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#accordionFAQ">
+                    <div class="accordion-body">
+                        Porque odian a las personas.
                     </div>
                 </div>
             </div>
