--- a/contacto.html
+++ b/contacto.html
@@ -13,8 +13,24 @@
     <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
     <link rel="manifest" href="/site.webmanifest">
+
+    <script src="https://www.google.com/recaptcha/api.js" async defer></script>
+    <style>
+        #todo .g-recaptcha {
+            max-width: fit-content;
+            margin: 1.75rem auto 0;
+        }
+
+        #todo #g-recaptcha-response {
+            display: block !important;
+            position: absolute;
+            margin: -50px 0 0 0 !important;
+            z-index: -999999;
+            opacity: 0;
+        }
+    </style>
 </head>
-<body>
+<body id="background">
     <header class="sticky-top">
         <nav class="navbar navbar-expand-lg">
             <div class="container-fluid">
@@ -52,48 +68,35 @@
         </nav>
     </header>
 
-    <main>
-        <div class="container-fluid" id="background">
-            <div class="container">
-                <h2 class="text-center pt-4 pb-3">Posts recientes</h2>
+    <main class="container">
+        <h2 class="pt-4 pb-2">Contacto</h2>
+        <p class="pb-2">Si tenés alguna pregunta, sugerencia o comentario sobre mi sitio web o sobre Minecraft en general, por favor contactame a través del siguiente formulario:</p>
 
-                <div class="row justify-content-md-center">
-                    <div class="col-lg">
-                        <div class="card">
-                            <img src="assets/posts/1.20_banner.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">5 curiosidades sobre Minecraft 1.20</h5>
-                                <h6 class="card-subtitle mb-3 text-body-secondary">Publicado el 17 de abril de 2023</h6>
-                                <p class="card-text">El lanzamiento de la nueva versión de Minecraft 1.20 es uno de los más esperados por los fans del juego. Acá hay algunos datos curiosos de esta versión.</p>
-                                <a href="posts/post1.html" class="btn btn-primary bcBtn">Leer más</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg">
-                        <div class="card">
-                            <img src="assets/posts/wallpaper-minecraft-hd.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">10 tips para sobrevivir en Minecraft</h5>
-                                <h6 class="card-subtitle mb-3 text-body-secondary">Publicado el 15 de abril de 2023</h6>
-                                <p class="card-text">Sobrevivir en Minecraft no es tarea fácil, especialmente si sos nuevo en el juego. Acá te damos tips consejos útiles para que podás sobrevivir en el mundo de Minecraft.</p>
-                                <a href="posts/post2.html" class="btn btn-primary bcBtn">Leer más</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-lg">
-                        <div class="card">
-                            <img src="assets/posts/minecraft-mods.jpg" class="card-img-top" alt="...">
-                            <div class="card-body">
-                                <h5 class="card-title">Los mejores mods para Minecraft</h5>
-                                <h6 class="card-subtitle mb-3 text-body-secondary">Publicado el 10 de abril de 2023</h6>
-                                <p class="card-text">Los mods en Minecraft posibilitan la personalización del juego de diversas formas, siendo una parte esencial de su ecosistema, y aquí podrás encontrar los mejores.</p>
-                                <a href="posts/post3.html" class="btn btn-primary bcBtn">Leer más</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
+        <form action="https://formspree.io/f/mrgwvajz" method="post" class="col-sm-6 m-auto">
+            <div class="mb-3">
+                <label for="Nombre" class="form-label">Nombre</label>
+                <input type="text" name="Nombre" id="Nombre" class="form-control" autocomplete="name" required>
             </div>
-        </div>
+
+            <div class="mb-3">
+                <label for="Email" class="form-label">Correo electrónico</label>
+                <input type="email" name="Email" id="Email" class="form-control" autocomplete="email" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="Asunto" class="form-label">Asunto</label>
+                <input type="text" name="Asunto" id="Asunto" class="form-control" required>
+            </div>
+
+            <div class="mb-3">
+                <label for="Mensaje" class="form-label">Mensaje</label>
+                <textarea name="Mensaje" id="Mensaje" class="form-control" rows="5" maxlength="300" required></textarea>
+            </div>
+
+            <div class="g-recaptcha" data-sitekey="6LcEMxMpAAAAAKC6W1MFvsGoKfZ4ZK1nNAq3YVxp"></div>
+            
+            <button type="submit" class="btn" id="enviar">Enviar</button>
+        </form>
     </main>
 
     <footer>
@@ -103,5 +106,14 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
 
     <script src="themes.js"></script>
+
+    <script>
+        window.onload = function () {
+            var el = document.getElementById('g-recaptcha-response');
+            if (el) {
+                el.setAttribute('required', 'required');
+            }
+        }
+    </script>
 </body>
 </html>
