--- a/randomness/2020.html
+++ b/randomness/2020.html
@@ -44,17 +44,18 @@
     <main class="no">
       <img src="img/2020.png" alt="2020" />
       <h2>Vasto desierto</h2>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
+      <p>Amplios terrenos,</p>
+      <p>mucho por explorar.</p>
+      <p>Navega sin rumbo,</p>
+      <p>alrededor del mar.</p>
+      <p>Cuida tus espaldas,</p>
+      <p>nunca lo sabrás.</p>
+      <p>Cuando el tiempo,</p>
+      <p>pueda atacar.</p>
+      <p>Amplios terrenos,</p>
+      <p>sin quién compartir.</p>
+      <p>Cuídate bien,</p>
+      <p>hazlo por mí.</p>
     </main>
 
     <footer>
