--- a/randomness/2021.html
+++ b/randomness/2021.html
@@ -44,17 +44,17 @@
     <main class="no">
       <img src="img/2021.png" alt="2021" />
       <h2>El aburrimiento es bueno</h2>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
+      <p>Busca qué hacer,</p>
+      <p>algo ha de haber.</p>
+      <p>El mágico baúl,</p>
+      <p>algo ha de tener.</p>
+      <p>Pero ahí en el fondo,</p>
+      <p>es cuando lo ves.</p>
+      <p>El aburrimiento es bueno,</p>
+      <p>y lo has de saber.</p>
+      <p>Cierra el baúl,</p>
+      <p>pues el buscar,</p>
+      <p>ha sido el mejor hacer.</p>
     </main>
 
     <footer>
