--- a/randomness/2022.html
+++ b/randomness/2022.html
@@ -44,17 +44,17 @@
     <main class="no">
       <img src="img/2022.png" alt="2022" />
       <h2>Un momento chill de cojones pt. 2</h2>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
+      <p>No te preocupes,</p>
+      <p>céntrate en disfrutar.</p>
+      <p>Aprovecha el momento,</p>
+      <p>y déjate llevar.</p>
+      <p>Una época dorada,</p>
+      <p>chill de cojones supo estar.</p>
+      <p>Pero que no te gane el tiempo,</p>
+      <p>pues estos momentos,</p>
+      <p>no para siempre estarán.</p>
+      <p>Más en tus recuerdos,</p>
+      <p>para siempre perdurarán.</p>
     </main>
 
     <footer>
