--- a/randomness/2023.html
+++ b/randomness/2023.html
@@ -44,18 +44,18 @@
     <main class="no">
       <img src="img/2023.png" alt="2023" />
       <h2>Larga espera</h2>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
-      <p>asd</p>
+      <p>Canaliza tu energía,</p>
+      <p>no pienses en nada más.</p>
+      <p>¿Qué es eso?</p>
+      <p>Es un anuncio oficial.</p>
+      <p>Por primera vez en años,</p>
+      <p>un rayo de luz ha de aparecer.</p>
+      <p>¿Nos traicionas de nuevo?</p>
+      <p>Con suerte te has de redimir.</p>
+      <p>Espera, ¿qué es eso?</p>
+      <p>¿Es esto real?</p>
+      <p>Pues parece que la larga espera,</p>
+      <p>al fin ha de terminar.</p>
     </main>
 
     <footer>
