--- a/randomness/2024.html
+++ b/randomness/2024.html
@@ -44,12 +44,15 @@
     <main>
       <img src="img/2024.png" alt="2024" />
       <h2>El ascenso y la decadencia</h2>
-      <iframe
-        src="https://store.steampowered.com/widget/2167220/"
-        frameborder="0"
-        width="646"
-        height="190"
-      ></iframe>
+      <p>Vuelta al ruedo,</p>
+      <p>mucho has de lograr.</p>
+      <p>Pon todo tu esfuerzo,</p>
+      <p>lejos has de llegar.</p>
+      <p>Pero entonces te das cuenta...</p>
+      <p>Todo lo que has hecho,</p>
+      <p>para nada ha servido.</p>
+      <p>Y no hay mucho qué hacer al respecto,</p>
+      <p>más que aceptar tu trágico destino.</p>
     </main>
 
     <footer>
