--- a/randomness/2024.html
+++ b/randomness/2024.html
@@ -53,6 +53,7 @@
       <p>para nada ha servido.</p>
       <p>Y no hay mucho qué hacer al respecto,</p>
       <p>más que aceptar tu trágico destino.</p>
+      <small>(Sayo-reference!!)</small>
     </main>
 
     <footer>
