--- a/randomness/2024.html
+++ b/randomness/2024.html
@@ -41,7 +41,7 @@
       </nav>
     </header>
 
-    <main>
+    <main style="padding-bottom: 24px;">
       <img src="img/2024.png" alt="2024" />
       <h2>El ascenso y la decadencia</h2>
       <p>Vuelta al ruedo,</p>
